# rust_web_mysql

./: Cargo.toml  README.md
pack/: .env
stage-9/: Cargo.toml
stage-9/src/: errors.rs  lib.rs
stage_3/src/: main.rs
stage_4/: Cargo.toml
stage_4/src/: main.rs
stage_5/: .env  Cargo.toml
stage_5/src/: db_access.rs  handlers.rs
stage_6/: Cargo.toml
stage_6/src/: db_access.rs  handlers.rs  main.rs  models.rs  state.rs
stage_7/: Cargo.toml  teacher.sql
stage_7/src/: error.rs  routers.rs
stage_7/src/models/: course.rs  teacher.rs
stage_8/: .env  Cargo.toml  course.sql
stage_8/src/: errors.rs  handlers.rs  main.rs  mod.rs  models.rs  routers.rs
stage_8/src/db_access/: course.rs  teacher.rs
stage_8/src/handlers/: course.rs  teacher.rs
stage_8/static/: register.html  teachers.html
stage_8/static/css/: register.css
stage_9/: LICENSE_MIT
stage_9/src/: utils.rs
stage_9/src/models/: course.rs
stage_9/www/: index.js  package-lock.json  package.json
